--- a/digital/src/main/resources/static/css/main.css
+++ b/digital/src/main/resources/static/css/main.css
@@ -13,7 +13,7 @@ body {
 
 body{
     margin:auto;
-    max-width: 1000px;
+    height:100%;
 }
 
 details {
@@ -36,16 +36,23 @@ pre {
 }
 
 .flex-container {
-    display: flex;
-    flex-wrap:nowrap ;
+    flex-direction: row;
+    display: inline-flex;
+    flex-wrap: wrap ;
     background-color: #32CD32;
   }
   
   .flex-container > div {
     background-color: #98FB98;
     text-align: center;
-    height: 200px;
+    width: 300px;
+    width: 400px;
+    white-space: nowrap;
     margin: 10px;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: column;
   }
   #navbar {
     overflow: hidden;
@@ -82,6 +89,21 @@ pre {
   .sticky + .content {
     padding-top: 60px;
   }
+  .sidebar {
+    height: 100%; 
+    background-color: white;
+    position: left;
+    overflow: auto;
+    
+}
+
+.bar-block{
+    width: 100%;
+    text-align: left;
+    padding-left: 25px;
+    
+    border-right-style: solid;
+}
 
 details code {
     font-size: 1.1em;
@@ -99,39 +121,3 @@ details code {
     word-wrap: break-word;
     /* Internet Explorer 5.5+ */
 }
-
-#navbar {
-    overflow: hidden;
-    background-color: #f2f2f2;
-  }
-  
-  #navbar a {
-    float: left;
-    display: block;
-    color: black;
-    text-align: center;
-    padding: 14px;
-    text-decoration: none;
-  }
-  #navbar a:hover {
-    background-color: #531B00;
-    color: white;
-  }
-  #navbar a.active {
-    background-color: #04AA6D;
-    color: black;
-  }
-  
-  .content {
-    padding: 16px;
-  }
-  
-  .sticky {
-    position: fixed;
-    top: 0;
-    width: 100%;
-  }
-  
-  .sticky + .content {
-    padding-top: 60px;
-  }
