--- a/digital/src/main/resources/static/css/main.css
+++ b/digital/src/main/resources/static/css/main.css
@@ -4,6 +4,7 @@
 
 html,
 body {
+    background-color: #EE7AE9;
     max-width: 100wv;
     max-height: 100vh;
     font-family: Arial, Helvetica, sans-serif;
@@ -39,11 +40,11 @@ pre {
     flex-direction: row;
     display: inline-flex;
     flex-wrap: wrap ;
-    background-color: #32CD32;
+    background-color: #9B30FF;
   }
   
   .flex-container > div {
-    background-color: #98FB98;
+    background-color: #AB82FF;
     text-align: center;
     width: 300px;
     width: 400px;
@@ -53,10 +54,18 @@ pre {
     align-items: center;
     flex-wrap: wrap;
     flex-direction: column;
+    
   }
+
+  .flex-container > div > button {
+    background-color: #c6abff;
+    margin-bottom:5px;
+  }
+
   #navbar {
     overflow: hidden;
-    background-color: #f2f2f2;
+    color: white;
+    background-color: #D15FEE;
   }
   
   #navbar a {
@@ -68,7 +77,7 @@ pre {
     text-decoration: none;
   }
   #navbar a:hover {
-    background-color: #531B00;
+    background-color: #B23AEE;
     color: white;
   }
   #navbar a.active {
@@ -92,11 +101,17 @@ pre {
   .sidebar {
     position: fixed;
     height: 100%; 
-    background-color: white;
+    background-color: #CD00CD;
     position: left;
     overflow: auto;
     
 }
+
+.alignCenter {
+  text-align: center;
+  padding-top: 10px;
+}
+
 
 .bar-block{
     width: 100%;
