--- a/digital/src/main/resources/static/css/main.css
+++ b/digital/src/main/resources/static/css/main.css
@@ -4,7 +4,7 @@
 
 html,
 body {
-    background-color: #EE7AE9;
+    background-color: #E284DF;
     max-width: 100wv;
     max-height: 100vh;
     font-family: Arial, Helvetica, sans-serif;
@@ -40,11 +40,11 @@ pre {
     flex-direction: row;
     display: inline-flex;
     flex-wrap: wrap ;
-    background-color: #9B30FF;
+    background-color: #E75CE3;
   }
   
   .flex-container > div {
-    background-color: #AB82FF;
+    background-color: #E983E6;
     text-align: center;
     width: 300px;
     width: 400px;
@@ -58,14 +58,14 @@ pre {
   }
 
   .flex-container > div > button {
-    background-color: #c6abff;
+    background-color: #db92d8;
     margin-bottom:5px;
   }
 
   #navbar {
     overflow: hidden;
     color: white;
-    background-color: #D15FEE;
+    background-color: #D559D1;
   }
   
   #navbar a {
@@ -77,7 +77,7 @@ pre {
     text-decoration: none;
   }
   #navbar a:hover {
-    background-color: #B23AEE;
+    background-color: #a93ea6;
     color: white;
   }
   #navbar a.active {
@@ -101,7 +101,7 @@ pre {
   .sidebar {
     position: fixed;
     height: 100%; 
-    background-color: #CD00CD;
+    background-color: #D559D1;
     position: left;
     overflow: auto;
     
