--- a/digital/src/main/resources/static/css/about.css
+++ b/digital/src/main/resources/static/css/about.css
@@ -4,7 +4,7 @@
 
 html,
 body {
-  background-color: #E284DF;
+  background-color: #FFBBFF;
     max-width: 100wv;
     max-height: 100vh;
     font-family: Arial, Helvetica, sans-serif;
@@ -41,7 +41,7 @@ pre {
     flex-direction: row;
     display: inline-flex;
     flex-wrap: wrap ;
-    background-color: #E75CE3;
+    background-color: #FFBBFF;
     justify-content: center;
   }
   
@@ -77,7 +77,7 @@ pre {
   }
 
   .flex-container > div > button {
-    background-color: #c6abff;
+    background-color: #FFBBFF;
     margin-bottom:5px;
   }
 
