--- a/digital/src/main/resources/static/css/contact.css
+++ b/digital/src/main/resources/static/css/contact.css
@@ -4,7 +4,7 @@
 
 html,
 body {
-  background-color: #E284DF;
+  background-color: #FFBBFF;
     max-width: 100wv;
     max-height: 100vh;
     font-family: Arial, Helvetica, sans-serif;
@@ -139,7 +139,7 @@ details code {
 }
 
 .contacts{
-  background-color:  #ff9dfc;
+  background-color: #FFE1FF;
   border: 5px solid #E75CE3;
   width: 300px;
   margin-left: 10px;
