--- a/digital/src/main/resources/static/css/main.css
+++ b/digital/src/main/resources/static/css/main.css
@@ -4,7 +4,7 @@
 
 html,
 body {
-    background-color: #E284DF;
+    background-color:#FFBBFF;
     max-width: 100wv;
     max-height: 100vh;
     font-family: Arial, Helvetica, sans-serif;
@@ -40,11 +40,11 @@ pre {
     flex-direction: row;
     display: inline-flex;
     flex-wrap: wrap ;
-    background-color: #E75CE3;
+    background-color: #A04392;
   }
   
   .flex-container > div {
-    background-color: #E983E6;
+    background-color:#FFE1FF;
     text-align: center;
     width: 300px;
     width: 400px;
