--- a/digital/src/main/resources/static/css/main.css
+++ b/digital/src/main/resources/static/css/main.css
@@ -58,7 +58,8 @@ pre {
   }
 
   button {
-    background-color: #db92d8;
+    background-color: #A04392;
+    color: white;
     margin-bottom:5px;
   }
 
